--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -8,6 +8,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
+  background-color: #F8F8F8;
 }
 
 html {
@@ -16,7 +17,6 @@ html {
 
 body {
   margin: 0;
-  background-color: #F8F8F8;
 }
 
 h1 {
@@ -45,7 +45,7 @@ img {
   font-size: 16px;
   font-weight: 400;
   text-decoration: none;
-  color: #000;
+  color: #000 !important;
   &:hover {
     background-color: #FFE302;
   }
